# carbot

./: README.md
arduino/carbot/: carbot.ino
printables/: bottom.ipt  bottom.stl  lid.ipt  lid.stl
rpi/: docker-compose.yml
rpi/backend/: Cargo.toml  Dockerfile
rpi/backend/src/: main.rs  mpu6050.rs  recording.rs  serial.rs  usb.rs  websocket.rs
rpi/frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
rpi/frontend/app/: app.config.ts  app.vue
rpi/frontend/app/assets/css/: main.css
rpi/frontend/app/components/: Button.vue  DirectionControl.vue  InputText.vue  SelectMenu.vue  Slider.vue  Triangle.vue
rpi/frontend/assets/css/: main.css
rpi/frontend/components/: Chart.vue  DirectionControl.vue  Slider.vue  Toggle.vue
rpi/test_arduino_serial/: Cargo.toml
rpi/test_arduino_serial/src/: main.rs
