[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
image = "0.24"
linux-embedded-hal = "0.3.0"
mpu6050 = "0.1.6"
once_cell = "1.21.3"
realsense-rust = "1.3.0"
rusb = "0.9.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7.2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }